--- a/CSharp-0-Intro.ipynb
+++ b/CSharp-0-Intro.ipynb
@@ -7,48 +7,19 @@
     "# C#\n",
     "\n",
     "- Object Oriented First / Wanna Be Functional\n",
-    "- Code should look & feel nice; should be less\n",
+    "- Code should look & feel nice; how to make it less\n",
     "- Performance is important\n",
-    "- C# Compiler has some tricks"
+    "- Compiler has some cool tricks\n",
+    "- Cool Libraries can be made"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "//Attributes: Compiler Tricks\n",
-    "using System.Diagnostics;\n",
-    "\n",
-    "[Conditional(\"DEBUG\")]\n",
-    "void TraceMethod()\n",
-    "{ }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "var data = new[] { 5, 3, 7, 8, 2, 9 };\n",
-    "foreach(var d in data)\n",
-    "    Console.WriteLine(d);"
+    "- https://learn.microsoft.com/en-us/dotnet/csharp/linq/\n",
+    "- https://reactivex.io\n",
+    "- https://github.com/louthy/language-ext"
    ]
   }
  ],
