--- a/CSharp-2.ipynb
+++ b/CSharp-2.ipynb
@@ -1,6 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//Attributes: Compiler Tricks\n",
+    "using System.Diagnostics;\n",
+    "\n",
+    "[Conditional(\"DEBUG\")]\n",
+    "void TraceMethod()\n",
+    "{ }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "var data = new[] { 5, 3, 7, 8, 2, 9 };\n",
+    "foreach(var d in data)\n",
+    "    Console.WriteLine(d);"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -307,22 +346,22 @@
    },
    "outputs": [],
    "source": [
-    "class ClickEventArgument : EventArgs\n",
+    "class StepCompletedEventArgs : EventArgs\n",
     "{\n",
-    "    public bool Continue = false;\n",
+    "    public bool CanContinue = false;\n",
     "}\n",
     "\n",
-    "event EventHandler<ClickEventArgument> OnClick;\n",
+    "event EventHandler<StepCompletedEventArgs> StepCompleted;\n",
     "\n",
     "void MultiStepLogic()\n",
     "{\n",
     "    //Step 1\n",
     "    //Before proceeding to step 2; we need to check if we can continue\n",
-    "    var args = new ClickEventArgument();\n",
-    "    if (null != OnClick) // someone has subscribed\n",
-    "        OnClick(new object(), args);\n",
+    "    var args = new StepCompletedEventArgs();\n",
+    "    if (null != StepCompleted) // someone has subscribed\n",
+    "        StepCompleted(new object(), args);\n",
     "    \n",
-    "    if (args.Continue)\n",
+    "    if (args.CanContinue)\n",
     "        Console.WriteLine(\"I can continue\");\n",
     "    else\n",
     "        Console.WriteLine(\"I cann't continue\");\n",
@@ -330,7 +369,7 @@
     "}\n",
     "\n",
     "//Lets subscribe\n",
-    "OnClick += (s, e) => e.Continue = true;\n",
+    "StepCompleted += (s, e) => e.CanContinue = true;\n",
     "MultiStepLogic();"
    ]
   },
@@ -347,13 +386,13 @@
    },
    "outputs": [],
    "source": [
-    "void dontLetThemContinue(object sender, ClickEventArgument args) { args.Continue = false; }\n",
+    "void dontLetThemContinue(object sender, StepCompletedEventArgs args) { args.CanContinue = false; }\n",
     "\n",
     "//lets make another subscription\n",
-    "OnClick += dontLetThemContinue;     // this being second; this will have final say\n",
+    "StepCompleted += dontLetThemContinue;     // this being second; this will have final say\n",
     "MultiStepLogic(); // shouldnt continue\n",
     "\n",
-    "OnClick -= dontLetThemContinue;     // for unsubscribe to work we had to use local method\n",
+    "StepCompleted -= dontLetThemContinue;     // for unsubscribe to work we had to use local method\n",
     "MultiStepLogic(); // should continue"
    ]
   },
