--- a/CSharp-4.ipynb
+++ b/CSharp-4.ipynb
@@ -4,10 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Singleton & TPL\n",
+    "# OOP: Encapsulation\n",
     "\n",
-    "- Task Parallel Library; https://learn.microsoft.com/en-us/dotnet/standard/parallel-programming/task-parallel-library-tpl\n",
-    "- Task based async programming; https://learn.microsoft.com/en-us/dotnet/standard/parallel-programming/task-based-asynchronous-programming"
+    "- Value and Reference Types; Structs and Classes\n",
+    "- Members; list below limited to items not being used in following example\n",
+    "    - Fields\n",
+    "    - Indexers\n",
+    "    - Operators\n",
+    "    - Nested Types\n",
+    "- Accessibility; list below limited to items not being used in following example\n",
+    "    - internal\n",
+    "    - protected internal\n",
+    "    - private protected"
    ]
   },
   {
@@ -23,65 +31,117 @@
    },
    "outputs": [],
    "source": [
-    "#r \"nuget: Microsoft.EntityFrameworkCore.SqlServer, *-*\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "using Microsoft.EntityFrameworkCore;\n",
+    "interface IServer {}\n",
     "\n",
-    "class Reading\n",
+    "interface IConnectionManagement\n",
     "{\n",
-    "    public int DataId { get; set; }\n",
-    "\n",
-    "    public int Number1 { get; set; }\n",
-    "    public int Number2 { get; set; }\n",
-    "    public int Number3 { get; set; }\n",
-    "    public int Number4 { get; set; }\n",
-    "    public int Number5 { get; set; }\n",
-    "\n",
-    "    public double WideNumber1 { get; set; }\n",
-    "    public double WideNumber2 { get; set; }\n",
-    "    public double WideNumber3 { get; set; }\n",
-    "    public double WideNumber4 { get; set; }\n",
-    "    public double WideNumber5 { get; set; }\n",
-    "\n",
-    "    public string String1 { get; set; }\n",
-    "    public string String2 { get; set; }\n",
-    "    public string String3 { get; set; }\n",
-    "    public string String4 { get; set; }\n",
-    "    public string String5 { get; set; }\n",
+    "    void Connect();\n",
+    "    void Disconnect();\n",
     "}\n",
     "\n",
-    "class JiraDbContext : DbContext\n",
+    "abstract class TdsServer\n",
     "{\n",
-    "    public DbSet<Reading> Readings { get; set; }\n",
+    "    protected void Connect(string server, int port, string userName, string password)\n",
+    "    {}\n",
+    "}\n",
     "\n",
-    "    protected override void OnConfiguring(DbContextOptionsBuilder optionsBuilder)\n",
-    "    {\n",
-    "        var connectionString = \"Server=.;Database=JiraDb;Trusted_Connection=True;TrustServerCertificate=True;\";\n",
-    "        optionsBuilder.UseSqlServer(connectionString);\n",
-    "    }\n",
+    "class SqlServer : TdsServer, IConnectionManagement, IServer\n",
+    "{\n",
+    "    const int DEFAULTPORT = 1433;\n",
     "\n",
-    "    protected override void OnModelCreating(ModelBuilder modelBuilder)\n",
+    "    public event EventHandler OnConnected;\n",
+    "\n",
+    "    public string Server { get; set; }\n",
+    "    public string UserName { get; set; }\n",
+    "    public string Password { get; set; }\n",
+    "\n",
+    "    public SqlServer()\n",
+    "    {}\n",
+    "\n",
+    "    ~SqlServer()\n",
+    "    {}\n",
+    "\n",
+    "    public void Dispose() {}\n",
+    "\n",
+    "    public void Connect()\n",
+    "    {}\n",
+    "\n",
+    "    public void Disconnect()\n",
+    "    {}\n",
+    "}\n",
+    "\n",
+    "//using(var server = new SqlServer()) {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//improvements ^^\n",
+    "\n",
+    "//abstract\n",
+    "//sealed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Expressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Expression<Func<int, bool>> expression = num => num < 5;\n",
+    "var lambda = expression.Compile();\n",
+    "lambda(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using System.Linq.Expressions;\n",
+    "\n",
+    "class Validator<T>\n",
+    "{\n",
+    "    private readonly List<Expression<Func<T, bool>>> validationRules = new List<Expression<Func<T, bool>>>();\n",
+    "\n",
+    "    public void AddRule(Expression<Func<T, bool>> rule) => validationRules.Add(rule);\n",
+    "\n",
+    "    public bool Validate(T entity)\n",
     "    {\n",
-    "        //base.OnModelCreating(modelBuilder);\n",
-    "        modelBuilder.Entity<Reading>(entity =>\n",
-    "        {\n",
-    "            entity.HasKey(e => e.DataId);\n",
-    "            entity.HasIndex(e => e.DataId).IsUnique();\n",
-    "        });\n",
+    "        bool isValid = validationRules.All(rule => rule.Compile()(entity));\n",
+    "        return isValid;\n",
     "    }\n",
     "}"
    ]
@@ -99,95 +159,29 @@
    },
    "outputs": [],
    "source": [
-    "var random = new Random(Guid.NewGuid().GetHashCode());\n",
-    "\n",
-    "using(var db = new JiraDbContext())\n",
+    "class Person\n",
     "{\n",
-    "    db.Database.EnsureCreated();\n",
+    "    public string Name { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "    public string Email { get; set; }\n",
+    "}\n",
     "\n",
-    "    for(int i = 1; i <= 25000; i ++) //lets generate lot of data\n",
-    "    {\n",
-    "        db.Readings.Add(new Reading()\n",
-    "        {\n",
-    "            Number1 = random.Next(), Number2 = random.Next(), Number3 = random.Next(),\n",
-    "            Number4 = random.Next(), Number5 = random.Next(),\n",
+    "var personValidator = new Validator<Person>();\n",
     "\n",
-    "            WideNumber1 = random.Next() * random.Next(),\n",
-    "            WideNumber2 = random.Next() * random.Next(),\n",
-    "            WideNumber3 = random.Next() * random.Next(),\n",
-    "            WideNumber4 = random.Next() * random.Next(),\n",
-    "            WideNumber5 = random.Next() * random.Next(),\n",
+    "personValidator.AddRule(p => !string.IsNullOrEmpty(p.Name));\n",
+    "personValidator.AddRule(p => p.Age >= 18);\n",
+    "personValidator.AddRule(p => p.Email.Contains(\"@\"));\n",
     "\n",
-    "            String1 = random.Next().GetHashCode().ToString(),\n",
-    "            String2 = random.Next().GetHashCode().ToString(),\n",
-    "            String3 = random.Next().GetHashCode().ToString(),\n",
-    "            String4 = random.Next().GetHashCode().ToString(),\n",
-    "            String5 = random.Next().GetHashCode().ToString()\n",
-    "        });\n",
-    "        db.SaveChanges();\n",
-    "    }\n",
-    "}"
+    "personValidator.Validate(new Person() { Name = \"Khurram Aziz\", Age = 45, Email = \"khurram@uworx.co.uk\" })"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "using System.Threading;\n",
     "\n",
-    "class Singleton\n",
-    "{\n",
-    "    static readonly object lockObject = new object();\n",
-    "    static volatile Singleton instance; //volatile importance\n",
-    "\n",
-    "    Reading[] data = null;\n",
-    "\n",
-    "    void print(string s)\n",
-    "    {\n",
-    "        Console.WriteLine($\"{DateTime.Now} {s}\");\n",
-    "    }\n",
-    "\n",
-    "    Singleton() \n",
-    "    {\n",
-    "        print(\"ctor started\");\n",
-    "        using(var db = new JiraDbContext())\n",
-    "        {\n",
-    "            var q = from d in db.Readings\n",
-    "                    select d;\n",
-    "            data = q.ToArray();\n",
-    "        }\n",
-    "        print(\"ctor finished\");\n",
-    "    }\n",
-    "\n",
-    "    public Reading[] Data => data;\n",
-    "\n",
-    "    public static Singleton Instance\n",
-    "    {\n",
-    "        get\n",
-    "        {\n",
-    "            if (instance == null)\n",
-    "            {\n",
-    "                lock (lockObject)\n",
-    "                {\n",
-    "                    if (instance == null)\n",
-    "                    {\n",
-    "                        instance = new Singleton();\n",
-    "                    }\n",
-    "                }\n",
-    "            }\n",
-    "            return instance;\n",
-    "        }\n",
-    "    }\n",
-    "}"
+    "- https://learn.microsoft.com/en-us/dotnet/api/system.linq.iqueryable\n",
+    "- AsQueryable()\n"
    ]
   },
   {
@@ -205,31 +199,107 @@
    "source": [
     "using System.Linq;\n",
     "\n",
-    "void firstRandomRow()\n",
+    "var numbers = new[] { 78, 92, 100, 37, 81 };\n",
+    "IQueryable<int> query = numbers.AsQueryable();\n",
+    "var expressionTree = query.Expression;\n",
+    "Console.WriteLine($\"NodeType:   {expressionTree.NodeType}\");\n",
+    "Console.WriteLine($\"Type:       {expressionTree.Type.Name}\");\n",
+    "\n",
+    "//query = query.OrderBy(s => s);\n",
+    "//shuffle?\n",
+    "\n",
+    "query.ToArray()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Delegates\n",
+    "\n",
+    "- Contravariance: Using one method for different event / Delegates\n",
+    "- Covariance: Delegate can be more generatlized say object or base type and method can use specialized types\n",
+    "\n",
+    "Uses\n",
+    "\n",
+    "- Callbacks / Lazy Loadings\n",
+    "- Multicasting\n",
+    "- Events\n",
+    "- *Async Programming*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//Async; but will not work here\n",
+    "using System.Threading;\n",
+    "\n",
+    "delegate void LongProcess();\n",
+    "\n",
+    "void Process()\n",
     "{\n",
-    "    var randomRow = Singleton.Instance.Data.OrderBy(d => Guid.NewGuid()).FirstOrDefault();\n",
-    "    if (null != randomRow)\n",
-    "        Console.WriteLine($\"{DateTime.Now} [{Thread.CurrentThread.ManagedThreadId}] {randomRow.DataId} is selected\");\n",
+    "    Console.WriteLine($\"Running Process in {Thread.CurrentThread.ManagedThreadId}\");\n",
+    "    Thread.Sleep(5000); //simulating\n",
     "}\n",
     "\n",
-    "var tasks = new []\n",
-    "{\n",
-    "    new Task(firstRandomRow),\n",
-    "    new Task(firstRandomRow),\n",
-    "    new Task(firstRandomRow),\n",
-    "    new Task(firstRandomRow),\n",
-    "    new Task(firstRandomRow)\n",
-    "};\n",
+    "LongProcess lp = Process;\n",
+    "var handler = lp.BeginInvoke(null, null);\n",
+    "Console.WriteLine($\"Running Main in {Thread.CurrentThread.ManagedThreadId}\");\n",
+    "Thread.Sleep(3000); //simulating bit faster\n",
+    "//lp.EndInvoke(handler);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Async / Await Intro; we will revisit\n",
     "\n",
-    "Parallel.ForEach(tasks, task =>\n",
-    "{\n",
-    "    task.Start();\n",
-    "});\n",
+    "using System.Threading;\n",
     "\n",
-    "await Task.WhenAll(tasks).ContinueWith(done =>\n",
+    "var random = new Random(Guid.NewGuid().GetHashCode());\n",
+    "\n",
+    "// we want to make this async\n",
+    "bool CpuHeavyMethod()\n",
     "{\n",
-    "    Console.WriteLine($\"{DateTime.Now} Completed...\");\n",
-    "});"
+    "    var next = random.Next();\n",
+    "    Thread.Sleep(1000);\n",
+    "    return next > (int.MaxValue / 2);\n",
+    "}\n",
+    "\n",
+    "async Task<bool> CpuHeavyMethodAsync()\n",
+    "{\n",
+    "    var next = random.Next();\n",
+    "    //Thread.Sleep(1000);\n",
+    "    \n",
+    "    await Task.Delay(1000);\n",
+    "\n",
+    "    //Task t = Task.Delay(1000);\n",
+    "    //can do some more stuff\n",
+    "    //t.Wait();\n",
+    "\n",
+    "    //Task.FromResult\n",
+    "    return next > (int.MaxValue / 2);\n",
+    "}"
    ]
   }
  ],
