--- a/CSharp-0-Intro.ipynb
+++ b/CSharp-0-Intro.ipynb
@@ -7,10 +7,18 @@
     "# C#\n",
     "\n",
     "- Object Oriented First / Wanna Be Functional\n",
-    "- Performance is important\n",
+    "- __Performance is important__\n",
+    "    - Async/Await is first class concept\n",
     "- Code should look & feel cool\n",
     "- Compiler has some cool tricks\n",
-    "- Cool Libraries can be made"
+    "- Cool Libraries can be made\n",
+    "- __*InterOp is important*__\n",
+    "\n",
+    "# The Ecosystem\n",
+    "\n",
+    "- .NET / C#\n",
+    "- __*Windows Server*__\n",
+    "- __*SQL Server*__"
    ]
   },
   {
