--- a/CSharp-0-Intro.ipynb
+++ b/CSharp-0-Intro.ipynb
@@ -4,32 +4,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# C#\n",
+    "# Language: C#\n",
+    "\n",
+    "<img src=images/top-programming-languages-2023.webp width=900>\n",
+    "\n",
+    "<img src=images/github-top-languages-by-percentage-growth.webp width=900>\n",
     "\n",
     "- Object Oriented First / Wanna Be Functional\n",
-    "- __Performance is important__\n",
+    "- Performance is important\n",
     "    - Async/Await is first class concept\n",
     "- Code should look & feel cool\n",
     "- Compiler has some cool tricks\n",
     "- Cool Libraries can be made\n",
-    "- __*InterOp is important*__\n",
-    "\n",
-    "# The Ecosystem\n",
-    "\n",
-    "- .NET / C#\n",
-    "- __*Windows Server*__\n",
-    "- __*SQL Server*__"
+    "    - https://learn.microsoft.com/en-us/dotnet/csharp/linq/\n",
+    "    - https://reactivex.io\n",
+    "    - https://github.com/louthy/language-ext\n",
+    "- InterOp is important"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Libraries\n",
-    "\n",
-    "- https://learn.microsoft.com/en-us/dotnet/csharp/linq/\n",
-    "- https://reactivex.io\n",
-    "- https://github.com/louthy/language-ext"
+    "# Windows Server\n",
+    "- Internet Information Services (IIS); https://en.wikipedia.org/wiki/Internet_Information_Services\n",
+    "- COM / COM+; https://en.wikipedia.org/wiki/Component_Object_Model\n",
+    "- MSMQ; https://en.wikipedia.org/wiki/Microsoft_Message_Queuing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SQL Server\n",
+    "- Windows, Linux, Docker, Azure/AWS\n",
+    "- Its not just Relational Database Engine (OTLP)\n",
+    "    - OLAP: Analysis Server\n",
+    "    - BI: Reporting Server\n",
+    "    - ETL: Integration Services\n",
+    "    - ML: Machine Learning Services /w R, Python, Java and C#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# __ASP.NET__\n",
+    "- ASP.NET and ASP.NET Core\n",
+    "- Entity Framework\n",
+    "- MVC"
    ]
   }
  ],
