removing global usings

--- a/CSharp-0-Intro.ipynb
+++ b/CSharp-0-Intro.ipynb
@@ -6,10 +6,6 @@
    "source": [
     "# Language: C#\n",
     "\n",
-    "<img src=images/top-programming-languages-2023.webp width=900>\n",
-    "\n",
-    "<img src=images/github-top-languages-by-percentage-growth.webp width=900>\n",
-    "\n",
     "- Object Oriented First / Wanna Be Functional\n",
     "- Performance is important\n",
     "    - Async/Await is first class concept\n",
@@ -49,10 +45,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# __ASP.NET__\n",
+    "# ASP.NET\n",
     "- ASP.NET and ASP.NET Core\n",
     "- Entity Framework\n",
-    "- MVC"
+    "- MVC\n",
+    "- __*Web APIs*__"
    ]
   }
  ],
