--- a/CSharp-6.ipynb
+++ b/CSharp-6.ipynb
@@ -100,9 +100,7 @@
     "//this.ViewBag.Collection = collection.ToArray();\n",
     "//return View(\"View\", collection.ToArray());\n",
     "\n",
-    "//foreach\n",
     "\n",
-    "// @page \n",
     "// @model Type\n",
     "\n",
     "<table id=\"collectionTable\" class=\"table\">\n",
@@ -114,14 +112,14 @@
     "        </tr>\n",
     "    </thead>\n",
     "    <tbody>\n",
-    "        @* @foreach(Type entity in this.ViewBag.Collection)\n",
+    "        @foreach(Type entity in this.ViewBag.Collection)\n",
     "        {\n",
     "            <tr>\n",
     "                <td>@entity.ID</td>\n",
     "                <td>@entity.FirstName</td>\n",
     "                <td>@entity.LastName</td>\n",
     "            </tr>\n",
-    "        } *@\n",
+    "        }\n",
     "    </tbody>\n",
     "</table>"
    ]
@@ -138,8 +136,7 @@
     "    - dotnet install -g dotnet-ef\n",
     "    - dotnet ef migrations add SomeName\n",
     "- https://learn.microsoft.com/en-us/aspnet/core/data/ef-mvc/migrations\n",
-    "- https://learn.microsoft.com/en-us/aspnet/core/mvc/views/working-with-forms\n",
-    "- https://learn.microsoft.com/en-us/aspnet/core/web-api"
+    "- https://learn.microsoft.com/en-us/aspnet/core/mvc/views/working-with-forms"
    ]
   }
  ],
