--- a/CSharp-0-Intro.ipynb
+++ b/CSharp-0-Intro.ipynb
@@ -4,25 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Language: C#\n",
-    "\n",
-    "- Object Oriented First / Wanna Be Functional\n",
-    "- Performance is important\n",
-    "    - Async/Await is first class concept\n",
-    "- Code should look & feel cool\n",
-    "- Compiler has some cool tricks\n",
-    "- Cool Libraries can be made\n",
-    "    - https://learn.microsoft.com/en-us/dotnet/csharp/linq/\n",
-    "    - https://reactivex.io\n",
-    "    - https://github.com/louthy/language-ext\n",
-    "- InterOp is important"
+    "# C# Language + Runtime"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Windows Server\n",
+    "- Object Oriented First / *Wanna Be Functional*\n",
+    "- Code should look & feel cool\n",
+    "- Compiler has some tricks\n",
+    "- __Base Class Library is tastefully done__\n",
+    "- InterOp is important\n",
+    "- Performance is important\n",
+    "    - Async/Await is first class concept\n",
+    "- Cool Libraries can be made\n",
+    "    - https://learn.microsoft.com/en-us/dotnet/csharp/linq/\n",
+    "    - https://reactivex.io\n",
+    "    - https://github.com/louthy/language-ext"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Windows Server"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Internet Information Services (IIS); https://en.wikipedia.org/wiki/Internet_Information_Services\n",
     "- COM / COM+; https://en.wikipedia.org/wiki/Component_Object_Model\n",
     "- MSMQ; https://en.wikipedia.org/wiki/Microsoft_Message_Queuing"
@@ -32,7 +44,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SQL Server\n",
+    "# SQL Server"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Windows, Linux, Docker, Azure/AWS\n",
     "- Its not just Relational Database Engine (OTLP)\n",
     "    - OLAP: Analysis Server\n",
@@ -45,7 +63,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ASP.NET\n",
+    "# ASP.NET"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- ASP.NET and ASP.NET Core\n",
     "- Entity Framework\n",
     "- MVC\n",
