--- a/CSharp-5.ipynb
+++ b/CSharp-5.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Checked Exception\n",
+    "# Java: Checked Exception\n",
     "\n",
     "- We have instead user filtered exception handlers\n",
     "    - https://learn.microsoft.com/en-us/dotnet/standard/exceptions/using-user-filtered-exception-handlers\n",
