--- a/00-Intro.ipynb
+++ b/00-Intro.ipynb
@@ -4,7 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# C# Language + Runtime"
+    "<img src=images/top-programming-languages-2023.webp width=900>\n",
+    "\n",
+    "<img src=images/github-top-languages-by-percentage-growth.webp width=900>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- C# Language; Runtime\n",
+    "    - Tooling is great\n",
+    "- ASP.NET\n",
+    "    - Entity Framework is nice ORM\n",
+    "- Ecosystem\n",
+    "    - Linux; Non Microsoft; Docker\n",
+    "    - Non Microsoft Vendors; Open Source: Community\n",
+    "        - PostgreSQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# C# Language; Runtime; Tools"
    ]
   },
   {
@@ -14,10 +37,11 @@
     "- Object Oriented First / *Wanna Be Functional*\n",
     "- Code should look & feel cool\n",
     "- Compiler has some tricks\n",
-    "- __Base Class Library is tastefully done__\n",
+    "- Base Class Library is tastefully done\n",
     "- InterOp is important\n",
     "- Performance is important\n",
-    "    - Async/Await is first class concept\n",
+    "    - Async/Await is first class concept; in language; in base class library and other libraries\n",
+    "- __Tooling is great__\n",
     "- Cool Libraries can be made\n",
     "    - https://learn.microsoft.com/en-us/dotnet/csharp/linq/\n",
     "    - https://reactivex.io\n",
@@ -71,9 +95,8 @@
    "metadata": {},
    "source": [
     "- ASP.NET and ASP.NET Core\n",
-    "- Entity Framework\n",
-    "- MVC\n",
-    "- __*Web APIs*__"
+    "- MVC & Web APIs\n",
+    "- __Entity Framework__"
    ]
   }
  ],
