--- a/09-Docker.ipynb
+++ b/09-Docker.ipynb
@@ -121,9 +121,9 @@
     "<img src=images/docker-taxonomy.png>\n",
     "\n",
     "- https://hub.docker.com/_/postgres\n",
-    "- https://stackoverflow.com/questions/26598738/how-to-create-user-database-in-script-for-docker-postgres\n",
-    "- https://docs.docker.com/engine/reference/commandline/volume_create\n",
-    "- https://stackoverflow.com/questions/41637505/how-to-persist-data-in-a-dockerized-postgres-database-using-volumes"
+    "- Azure Data Studio; https://azure.microsoft.com/en-us/products/data-studio\n",
+    "    - You can use it to connect to SQL, PostgreSQL, mySQL\n",
+    "    - Query or create Notebooks"
    ]
   }
  ],
