--- a/00-Intro.ipynb
+++ b/00-Intro.ipynb
@@ -4,20 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=images/top-programming-languages-2023.webp width=900>\n",
-    "\n",
-    "<img src=images/github-top-languages-by-percentage-growth.webp width=900>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- C# Language; Runtime\n",
+    "- __C# Language; Runtime__\n",
     "    - Tooling is great\n",
-    "- ASP.NET\n",
+    "- __ASP.NET__\n",
     "    - Entity Framework is nice ORM\n",
-    "- Ecosystem\n",
+    "- __Ecosystem__\n",
     "    - Linux; Non Microsoft; Docker\n",
     "    - Non Microsoft Vendors; Open Source: Community\n",
     "        - PostgreSQL"
@@ -41,7 +32,7 @@
     "- InterOp is important\n",
     "- Performance is important\n",
     "    - Async/Await is first class concept; in language; in base class library and other libraries\n",
-    "- __Tooling is great__\n",
+    "- Tooling is great\n",
     "- Cool Libraries can be made\n",
     "    - https://learn.microsoft.com/en-us/dotnet/csharp/linq/\n",
     "    - https://reactivex.io\n",
@@ -96,7 +87,23 @@
    "source": [
     "- ASP.NET and ASP.NET Core\n",
     "- MVC & Web APIs\n",
-    "- __Entity Framework__"
+    "- Entity Framework"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ramblings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=images/top-programming-languages-2023.webp width=900>\n",
+    "\n",
+    "<img src=images/github-top-languages-by-percentage-growth.webp width=900>"
    ]
   }
  ],
