--- a/10-Containerization.ipynb
+++ b/10-Containerization.ipynb
@@ -252,7 +252,6 @@
     "//dotnet add package Npgsql.EntityFrameworkCore.PostgreSQL\n",
     "//UseNpgsql\n",
     "//Connection String: Server=localhost;Database=postgres;UserName=postgres;Password=uworx;\n",
-    "//\"PostgresConnectionString\": \"Server=postgres;Database=postgres;UserName=postgres;Password=password;\"\n",
     "//recreate migrations\n",
     "//controller generate apply migration\n",
     "\n",
@@ -293,35 +292,17 @@
    "outputs": [],
    "source": [
     "//run docker version and notice it will fail\n",
+    "//add compose orchestration\n",
+    "//we will need following service in docker-compose\n",
+    "\n",
     "  postgres:\n",
     "    container_name: postgres\n",
     "    image: postgres\n",
     "    environment:\n",
     "      POSTGRES_PASSWORD: uworx\n",
-    "//Connection String: Server=postgres;Database=postgres;UserName=postgres;Password=uworx;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "volumes:\n",
-    "- pgdata:/var/lib/postgresql/data\n",
     "\n",
-    "volumes:\n",
-    "- \"C:/Users/Joey/Desktop/backend:/var/www/html\""
+    "//Connection String: Server=postgres;Database=postgres;UserName=postgres;Password=uworx;\n",
+    "//should work; enable migrate() call when generating data so we can do things from web itself"
    ]
   },
   {
@@ -331,47 +312,6 @@
     "- https://stackoverflow.com/questions/26598738/how-to-create-user-database-in-script-for-docker-postgres\n",
     "- https://docs.docker.com/engine/reference/commandline/volume_create\n",
     "- https://stackoverflow.com/questions/41637505/how-to-persist-data-in-a-dockerized-postgres-database-using-volumes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- https://github.com/dotnet/extensions"
    ]
   },
   {
