--- a/00-Intro.ipynb
+++ b/00-Intro.ipynb
@@ -9,9 +9,10 @@
     "- __ASP.NET__\n",
     "    - Entity Framework is nice ORM\n",
     "- __Ecosystem__\n",
-    "    - Linux; Non Microsoft; Docker\n",
-    "    - Non Microsoft Vendors; Open Source: Community\n",
-    "        - PostgreSQL"
+    "    - Azure Impact\n",
+    "    - Non Microsoft Stuff\n",
+    "    - Linux; Docker\n",
+    "    - Open Source / Community Stuff"
    ]
   },
   {
