--- a/11-JiraWorkLogs.ipynb
+++ b/11-JiraWorkLogs.ipynb
@@ -372,8 +372,8 @@
    },
    "outputs": [],
    "source": [
-    "var url = \"https://juriba.atlassian.net\";\n",
-    "var user = \"khurram.aziz@juriba.com\";\n",
+    "var url = \"https://YOUR-COMPANY.atlassian.net\";\n",
+    "var user = \"you@YOUR-COMPNAY.com\";\n",
     "var token = \"YOUR-TOKEN\";"
    ]
   },
@@ -399,7 +399,7 @@
     "IJiraClient jiraClient = JiraClient.Create(new Uri(url));\n",
     "jiraClient.SetBasicAuthentication(user, token);\n",
     "\n",
-    "var jql = Where.Text.Contains(\"AppVBuilderService\");\n",
+    "var jql = Where.Text.Contains(\"BuilderService\");\n",
     "var searchResult = await jiraClient.Issue.SearchAsync(jql);\n",
     "\n",
     "foreach (var issue in searchResult.Issues)\n",
@@ -448,7 +448,7 @@
    },
    "outputs": [],
    "source": [
-    "var issue = await jiraClient.Issue.GetAsync(\"AA-6017\");\n",
+    "var issue = await jiraClient.Issue.GetAsync(\"PROJ-1\"); // some jira ticket id\n",
     "issue"
    ]
   },
@@ -701,9 +701,14 @@
     "    //b is builder; all the added stuff is available here\n",
     "});     //inversion of control\n",
     "\n",
-    "// we can have more Configure methods; say how to setup metrices, telemetry and so on if our builder is open telemetry\n",
-    "\n",
-    "// https://learn.microsoft.com/en-us/dotnet/api/microsoft.extensions.configuration.configurationbuilder"
+    "// we can have more Configure methods; say how to setup metrices, telemetry and so on if our builder is open telemetry"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://learn.microsoft.com/en-us/dotnet/api/microsoft.extensions.configuration.configurationbuilder"
    ]
   },
   {
@@ -736,7 +741,7 @@
     "// when we wrap things in some block; try/catch or using; we see lot of changes in code when committing\n",
     "// newer simplified sytnax\n",
     "\n",
-    "//using var resource = new ExpensiveResource(); // it will be available for the rest of the block"
+    "using var resource2 = new ExpensiveResource(); // it will be available for the rest of the block"
    ]
   },
   {
@@ -773,16 +778,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Agent; something gets deployed \"with your thing\"\n",
-    "- Beats are shipper agents; they push data to somewhere (Logstash or Elasticsearch)\n",
-    "- Exporters expose metrics;  so someone can pull / poll it (Prometheus itself)\n",
-    "    - Prometheus Exporters are basically http endpoint exposing metrics in Prometheus format"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Cache"
    ]
   },
@@ -813,7 +808,8 @@
    "source": [
     "// Why Resilience is important?\n",
     "\n",
-    "// Generics / Action<T> and Func<T>; wrapping them in something cool"
+    "// Generics / Action<T> and Func<T>; wrapping them in something cool\n",
+    "    // Redis retry code"
    ]
   },
   {
