--- a/11-JiraWorkLogs.ipynb
+++ b/11-JiraWorkLogs.ipynb
@@ -575,10 +575,7 @@
     "## Github\n",
     "- https://github.com/khurram-uworx/jiraworklogs\n",
     "- Issues / Closed Issues\n",
-    "- Pull Requests / Closed PRs\n",
-    "- Opened Issues\n",
-    "- Discussions, Wiki\n",
-    "- Actions & Security"
+    "- Pull Requests / Closed PRs"
    ]
   },
   {
