--- a/00-Intro.ipynb
+++ b/00-Intro.ipynb
@@ -4,8 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- __Ecosystem__\n",
-    "    - Open Source / Community Stuff"
+    "# This Week: Azure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- .NET Ecosystem: Open Source / Community Stuff; how we assembled JiraWorklogs\n",
+    "- Azure: Any Platform; Any Language; .NET is supported by all Cloud Providers\n",
+    "- __.NET Ecosystem for Azure__"
    ]
   },
   {
@@ -25,7 +33,6 @@
     "- Base Class Library is tastefully done\n",
     "- InterOp is important\n",
     "- Performance is important\n",
-    "    - Async/Await is first class concept; in language; in base class library and other libraries\n",
     "- Tooling is great\n",
     "- Cool Libraries can be made\n",
     "    - https://learn.microsoft.com/en-us/dotnet/csharp/linq/\n",
