--- a/13-JiraWorkLogs.ipynb
+++ b/13-JiraWorkLogs.ipynb
@@ -152,9 +152,7 @@
     "- Docker Compose Networking\n",
     "- *Exposing Ports & ipchains*\n",
     "- Reverse Proxying; Kestrel\n",
-    "    - Hosts file\n",
-    "- Basic Authentication to protect Zipkin and Webapp\n",
-    "    - We can do same and expose RabbitMQ"
+    "- Basic Authentication to protect Zipkin, RabbitMQ and Webapp"
    ]
   },
   {
