--- a/00-Intro.ipynb
+++ b/00-Intro.ipynb
@@ -4,6 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Recap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p><img src=images/csharp-features.png></p>\n",
+    "\n",
+    "- C# is COOL (C Object Oriented Language)\n",
+    "    - Its Java; but closer to C/C++ and something more\n",
+    "- Working and picking ASP.NET is fine; other than Dependency Injection\n",
+    "- LINQ is nice\n",
+    "\n",
+    "<p><img src=images/csharp-linux-azure.png width=600></p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# This Week: Azure"
    ]
   },
@@ -13,7 +34,9 @@
    "source": [
     "- .NET Ecosystem: Open Source / Community Stuff; how we assembled JiraWorklogs\n",
     "- Azure: Any Platform; Any Language; .NET is supported by all Cloud Providers\n",
-    "- __.NET Ecosystem for Azure__"
+    "- __.NET Ecosystem for Azure__\n",
+    "\n",
+    "<p><img src=images/cloud-meme.webp></p>"
    ]
   },
   {
