--- a/15-Azure-CosmosDB.ipynb
+++ b/15-Azure-CosmosDB.ipynb
@@ -11,11 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- We Need volunteer(s) for Microsoft 365 / Power Platform sessions of next week\n",
-    "    - Office, Sharepoint, Teams etc\n",
-    "    - Power Apps / Power Automate / Power BI etc\n",
     "- Introduction to Testing in Visual Studio\n",
-    "- Cosmos DB and Azure Functions\n",
+    "- Cosmos DB\n",
     "- Some C# Stuff"
    ]
   },
@@ -375,31 +372,6 @@
     "- https://devblogs.microsoft.com/cosmosdb/csharp-notebooks\n",
     "\n",
     "<img src=images/data-science-meme.jpg>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Azure Portal / CLI / SDK"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- *Logs, Metrics and Telemetry using Insights*\n",
-    "- Web Apps are basically containers\n",
-    "    - They uses Environment Variables; Configurations\n",
-    "    - Application Insights\n",
-    "- SQL and Cosmos DB tools"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=images/jiraworklogs-azure-debt.png>"
    ]
   },
   {
